--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,7 +11,9 @@ spring:
           uri: https://github.com/iamvardhanharsha/FarmerinfoConfig
           username: iamvardhanharsha
           default-label: master
-          search-paths: Farmerinfo-config
+          #search-paths: Farmerinfo-config/FarmerInfo/
+          search-paths: '**/'
+          #,Farmerinfo-config/FarmerInfo/,Farmerinfo-config/FarmerInfo/*
           #search-paths: '*,{application},config/{application}, config/, config/*'
           #search-paths: '{application}'
           #search-paths: 'config/{application}'
