--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,9 +11,5 @@ spring:
           uri: https://github.com/iamvardhanharsha/FarmerinfoConfig
           username: iamvardhanharsha
           default-label: master
-          #search-paths: Farmerinfo-config/FarmerInfo/
+          clone-on-start: true
           search-paths: '**/'
-          #,Farmerinfo-config/FarmerInfo/,Farmerinfo-config/FarmerInfo/*
-          #search-paths: '*,{application},config/{application}, config/, config/*'
-          #search-paths: '{application}'
-          #search-paths: 'config/{application}'
